--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/sweeneyapps/congress.git"
   },
   "keywords": [
-    "traveGov"
+    "govTrack"
   ],
   "author": "Paul Sweeney Jr.",
   "license": "ISC",
