--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "congress",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "nodejs project on trackGov API",
+  "engines": {
+    "node": "5.9.1"
+  },
   "main": "app.js",
   "dependencies": {
     "express": "^4.14.0",
